--- a/assets/package.json
+++ b/assets/package.json
@@ -27,6 +27,7 @@
     "gulp-less": "^3.5.0",
     "gulp-replace": "^1.0.0",
     "gulp-shell": "^0.6.5",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "minimatch": "^3.0.2"
   }
 }
