--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Sylhare/Type-on-Strap#readme",
   "devDependencies": {
+    "cryptiles": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
@@ -28,6 +29,8 @@
     "gulp-replace": "^1.0.0",
     "gulp-shell": "^0.6.5",
     "gulp-uglify": "^3.0.1",
+    "hoek": "^4.2.1",
+    "lodash": "^4.17.5",
     "minimatch": "^3.0.2"
   }
 }
