--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ theme_settings:
   behance: Caidezel
   bitbucket:
   dribbble:
-  facebook:
+  facebook: antoinegouy.pro
   flickr:
   gitlab:
   github: "Caidezel"
